manifests/mongodb-statefulset.yaml
apiVersion: apps/v1 
kind: StatefulSet
metadata:
  name: mongodb
  namespace: gke-devops-week8
spec:
  serviceName: "mongodb"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: mongodb-data
            mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 6Gi  
        storageClassName: standard  
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: gke-devops-week8
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
